# src/main/java/com/icthh/xm/tmf/ms/document/web/rest/DocumentApiImpl.java
@@ -8,6 +8,7 @@ import com.icthh.xm.commons.lep.spring.LepService;
 import com.icthh.xm.tmf.ms.document.web.api.DocumentApiDelegate;
 import com.icthh.xm.tmf.ms.document.web.api.model.Document;
 import java.util.List;
+import org.springframework.core.io.Resource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Component;
@@ -22,5 +23,13 @@ public class DocumentApiImpl implements DocumentApiDelegate {
     @Override
     public ResponseEntity<List<Document>> retrieveDocument(String id) {
         return ResponseEntity.ok(emptyList());
+    }
+
+    @PreAuthorize("hasPermission({}, 'DOCUMENT.RETRIEVE.PDF')")
+    @Timed
+    @LogicExtensionPoint("RetrievePdf")
+    @Override
+    public ResponseEntity<Resource> retrieveDocumentPdf(String id) {
+        return null;
     }
 }
