# src/main/resources/swagger/api.yml
@@ -246,6 +246,37 @@ paths:
                     description: Internal Server Error
                     schema:
                         $ref: '#/definitions/Error'
+    '/document/{id}.pdf':
+        get:
+            operationId: retrieveDocumentPdf
+            summary: Retrieves a 'Document' by Id
+            tags:
+                - document
+            parameters:
+                - required: true
+                  type: string
+                  name: id
+                  in: path
+                  description: Identifier of the Document
+            produces:
+                - application/pdf
+            responses:
+                '200':
+                    description: Ok
+                    schema:
+                        type: file
+                '400':
+                    description: Bad Request
+                    schema:
+                        $ref: '#/definitions/Error'
+                '404':
+                    description: Not Found
+                    schema:
+                        $ref: '#/definitions/Error'
+                '500':
+                    description: Internal Server Error
+                    schema:
+                        $ref: '#/definitions/Error'
     /hub:
         post:
             operationId: registerListener
